<resources>
    <string name="app_name">Recepti - Java</string>
    <string name="title_foodstuff">Namirnice</string>
    <string name="title_recipe">Recepti</string>
    <string name="title_menu">Meni</string>

    <string name="lable_pick_restaurant">Izaberi svoj restoran</string>
    <string name="label_enter_foodstuff">Dodaj namirnicu</string>
    <string name="label_foodstuff_name">Naziv namirnice:</string>
    <string name="label_calories">Kalorije: </string>
    <string name="label_protein">Proteini: </string>
    <string name="label_sugar">Šećer: </string>
    <string name="label_fats">Masti: </string>
    <string name="label_vitaminA">Vitamin A: </string>
    <string name="label_vitaminC">Vitamin C: </string>
    <string name="label_prep_time">Vreme pripreme:</string>
    <string name="label_serves">Broj porcija:</string>
    <string name="label_nutri_values">Nutri vrednosti:</string>
    <string name="label_insert_recipe">Dodaj recept</string>
    <string name="label_recipe_name">Naziv recepta:</string>
    <string name="label_level">Nivo:</string>
    <string name="label_ingredients">Sastojci:</string>
    <string name="label_recipe_count">Broj:</string>

    <string name="placeholder_name">Naziv</string>
    <string name="placeholder_value">Vrednost</string>
    <string name="placeholder_description">Opis</string>
    <string name="placeholder_search">Pretraga</string>

    <string name="button_submit">Dodaj</string>
    <string name="button_easy">Lako</string>
    <string name="button_medium">Srednje</string>
    <string name="button_hard">Teško</string>

    <string name="check_box_good_for_diabetics">Pogodno za dijabetičare</string>
    <string name="check_box_sort_by_prep_time">Sortiranje po vremenu pripreme</string>


    <string name="toast_foodstuff_added">Namirnica uspešno dodata!</string>
    <string name="toast_recipe_added">Recept uspešno dodat!</string>


    <string-array name="foodstuff_tabs">
        <item>Nova namirnica</item>
        <item>Lista namirnica</item>
    </string-array>

</resources>