<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.recipe.RecipeFragment">

    <TextView
            android:id="@+id/insertRecipeText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/label_insert_recipe"
            android:gravity="center"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="20dp"
            app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
            android:id="@+id/recipeNameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/insertRecipeText"
            app:layout_constraintStart_toStartOf="parent">

        <TextView
                android:id="@+id/recipeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_recipe_name"
                android:textColor="@color/black"
                android:textSize="16dp"
                app:layout_constraintTop_toBottomOf="@id/enterFoodstuffText"
                app:layout_constraintStart_toStartOf="parent"/>

        <EditText
                android:id="@+id/recipeName"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:hint="@string/placeholder_name"
                app:layout_constraintTop_toTopOf="@id/recipeTextView"
                app:layout_constraintBottom_toBottomOf="@id/recipeTextView"
                app:layout_constraintStart_toEndOf="@id/recipeTextView"/>

    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.25"/>

    <TextView
            android:id="@+id/prepTimeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:text="@string/label_prep_time"
            android:textColor="@color/black"
            android:textSize="16dp"
            app:layout_constraintTop_toBottomOf="@id/recipeNameLayout"
            app:layout_constraintStart_toStartOf="parent"/>

    <EditText
            android:id="@+id/prepTimeValue"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:hint="@string/placeholder_value"
            app:layout_constraintTop_toTopOf="@id/prepTimeTextView"
            app:layout_constraintBottom_toBottomOf="@id/prepTimeTextView"
            app:layout_constraintStart_toEndOf="@id/guideline"/>

    <TextView
            android:id="@+id/servesTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:text="@string/label_serves"
            android:textColor="@color/black"
            android:textSize="16dp"
            app:layout_constraintTop_toBottomOf="@id/prepTimeTextView"
            app:layout_constraintStart_toStartOf="parent"/>

    <EditText
            android:id="@+id/servesValue"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:hint="@string/placeholder_value"
            app:layout_constraintTop_toTopOf="@id/servesTextView"
            app:layout_constraintBottom_toBottomOf="@id/servesTextView"
            app:layout_constraintStart_toEndOf="@id/guideline"/>

    <TextView
            android:id="@+id/levelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:text="@string/label_level"
            android:textColor="@color/black"
            android:textSize="16dp"
            app:layout_constraintTop_toBottomOf="@id/servesTextView"
            app:layout_constraintStart_toStartOf="parent"/>

    <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="@id/levelTextView"
            app:layout_constraintBottom_toBottomOf="@id/levelTextView"
            app:layout_constraintStart_toEndOf="@id/levelTextView">

        <RadioButton
                android:id="@+id/easyButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:checked="true"
                android:text="@string/button_easy"/>

        <RadioButton
                android:id="@+id/mediumButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/button_medium"/>

        <RadioButton
                android:id="@+id/hardButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/button_hard"/>

    </RadioGroup>

    <EditText
            android:id="@+id/descriptionValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="20dp"
            android:singleLine="false"
            android:maxLines="3"
            android:hint="@string/placeholder_description"
            app:layout_constraintTop_toBottomOf="@id/levelTextView"/>

    <TextView
            android:id="@+id/ingredientsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:textSize="16dp"
            android:text="@string/label_ingredients"
            app:layout_constraintTop_toBottomOf="@id/descriptionValue"
            app:layout_constraintStart_toStartOf="parent"/>
    
    <Spinner
            android:id="@+id/foodstuffDropdown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/ingredientsText"
            app:layout_constraintBottom_toBottomOf="@id/ingredientsText"
            app:layout_constraintStart_toEndOf="@id/ingredientsText"/>

    <TextView
            android:id="@+id/selectedIngredientsText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="20dp"
            android:textColor="@color/black"
            android:textSize="16dp"
            app:layout_constraintTop_toBottomOf="@id/ingredientsText"/>

    <Button
            android:id="@+id/submitButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginHorizontal="20dp"
            android:text="@string/button_submit"
            app:layout_constraintTop_toBottomOf="@id/selectedIngredientsText"/>

</androidx.constraintlayout.widget.ConstraintLayout>