<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.menu.MenuFragment">

    <TextView
            android:id="@+id/menuText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/title_menu"
            android:gravity="center"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="20dp"
            app:layout_constraintTop_toTopOf="parent"/>

    <CheckBox
            android:id="@+id/isGoodForDiabetics"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_box_good_for_diabetics"
            app:layout_constraintTop_toBottomOf="@id/menuText"
            app:layout_constraintStart_toStartOf="parent"/>

    <CheckBox
            android:id="@+id/sortByPrepTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_box_sort_by_prep_time"
            app:layout_constraintTop_toBottomOf="@id/menuText"
            app:layout_constraintStart_toEndOf="@id/isGoodForDiabetics"/>

    <EditText
            android:id="@+id/searchEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/placeholder_search"
            app:layout_constraintTop_toBottomOf="@id/menuText"
            app:layout_constraintStart_toEndOf="@id/sortByPrepTime"
            app:layout_constraintEnd_toEndOf="parent"/>


    <TextView
            android:id="@+id/recipeCountText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:textColor="@color/black"
            android:text="@string/label_recipe_count"
            app:layout_constraintTop_toBottomOf="@id/isGoodForDiabetics"
            app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recipesRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            tools:itemCount="3"
            tools:listitem="@layout/item_recipe"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@id/isGoodForDiabetics"
            app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>