<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:layout_constraintTop_toTopOf="parent"
            app:tabGravity="fill"
            app:tabIndicatorColor="@color/purple_700"
            app:tabIndicatorHeight="4dp"
            app:tabMode="fixed"
            app:tabSelectedTextColor="@color/purple_700"
            app:tabTextAppearance="@style/CustomTabTextAppearance"
            app:tabTextColor="@color/gray" />

    <ImageView
            android:id="@+id/foodstuffImage1"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:src="@drawable/ic_foodstuff_1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tabLayout"/>

    <androidx.viewpager.widget.ViewPager
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/foodstuffImage1"
            app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/newFoodstuffConstraint"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintTop_toBottomOf="@id/foodstuffImage1"
                app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                android:id="@+id/enterFoodstuffText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/label_enter_foodstuff"
                android:gravity="center"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="20dp"
                app:layout_constraintTop_toTopOf="parent"/>

            <LinearLayout
                    android:id="@+id/foodstuffLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal"
                    android:gravity="center"
                    app:layout_constraintTop_toBottomOf="@id/enterFoodstuffText"
                    app:layout_constraintStart_toStartOf="parent">

                <TextView
                        android:id="@+id/foodstuffNameTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_foodstuff_name"
                        android:textColor="@color/black"
                        android:textSize="16dp"
                        app:layout_constraintTop_toBottomOf="@id/enterFoodstuffText"
                        app:layout_constraintStart_toStartOf="parent"/>

                <EditText
                        android:id="@+id/foodstuffName"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:hint="@string/placeholder_name"
                        android:singleLine="true"
                        app:layout_constraintTop_toTopOf="@id/foodstuffNameTextView"
                        app:layout_constraintBottom_toBottomOf="@id/foodstuffNameTextView"
                        app:layout_constraintStart_toEndOf="@id/foodstuffNameTextView"/>

            </LinearLayout>

            <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline"
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.25"/>

            <TextView
                    android:id="@+id/caloriesTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"
                    android:text="@string/label_calories"
                    android:textColor="@color/black"
                    android:textSize="16dp"
                    app:layout_constraintTop_toBottomOf="@id/foodstuffLayout"
                    app:layout_constraintStart_toStartOf="parent"/>

            <EditText
                    android:id="@+id/caloriesValue"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/placeholder_value"
                    android:singleLine="true"
                    android:inputType="number"
                    app:layout_constraintTop_toTopOf="@id/caloriesTextView"
                    app:layout_constraintBottom_toBottomOf="@id/caloriesTextView"
                    app:layout_constraintStart_toEndOf="@id/guideline"/>

            <TextView
                    android:id="@+id/proteinTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"
                    android:text="@string/label_protein"
                    android:textColor="@color/black"
                    android:textSize="16dp"
                    app:layout_constraintTop_toBottomOf="@id/caloriesTextView"
                    app:layout_constraintStart_toStartOf="parent"/>

            <EditText
                    android:id="@+id/proteinValue"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/placeholder_value"
                    android:singleLine="true"
                    android:inputType="number"
                    app:layout_constraintTop_toTopOf="@id/proteinTextView"
                    app:layout_constraintBottom_toBottomOf="@id/proteinTextView"
                    app:layout_constraintStart_toEndOf="@id/guideline"/>

            <TextView
                    android:id="@+id/sugarTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"
                    android:text="@string/label_sugar"
                    android:textColor="@color/black"
                    android:textSize="16dp"
                    app:layout_constraintTop_toBottomOf="@id/proteinTextView"
                    app:layout_constraintStart_toStartOf="parent"/>

            <EditText
                    android:id="@+id/sugarValue"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/placeholder_value"
                    android:singleLine="true"
                    android:inputType="number"
                    app:layout_constraintTop_toTopOf="@id/sugarTextView"
                    app:layout_constraintBottom_toBottomOf="@id/sugarTextView"
                    app:layout_constraintStart_toEndOf="@id/guideline"/>

            <TextView
                    android:id="@+id/fatsTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"
                    android:text="@string/label_fats"
                    android:textColor="@color/black"
                    android:textSize="16dp"
                    app:layout_constraintTop_toBottomOf="@id/sugarTextView"
                    app:layout_constraintStart_toStartOf="parent"/>

            <EditText
                    android:id="@+id/fatsValue"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/placeholder_value"
                    android:singleLine="true"
                    android:inputType="number"
                    app:layout_constraintTop_toTopOf="@id/fatsTextView"
                    app:layout_constraintBottom_toBottomOf="@id/fatsTextView"
                    app:layout_constraintStart_toEndOf="@id/guideline"/>

            <TextView
                    android:id="@+id/vitaminATextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"
                    android:text="@string/label_vitaminA"
                    android:textColor="@color/black"
                    android:textSize="16dp"
                    app:layout_constraintTop_toBottomOf="@id/fatsTextView"
                    app:layout_constraintStart_toStartOf="parent"/>

            <EditText
                    android:id="@+id/vitaminAValue"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/placeholder_value"
                    android:singleLine="true"
                    android:inputType="number"
                    app:layout_constraintTop_toTopOf="@id/vitaminATextView"
                    app:layout_constraintBottom_toBottomOf="@id/vitaminATextView"
                    app:layout_constraintStart_toEndOf="@id/guideline"/>

            <TextView
                    android:id="@+id/vitaminCTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"
                    android:text="@string/label_vitaminC"
                    android:textColor="@color/black"
                    android:textSize="16dp"
                    app:layout_constraintTop_toBottomOf="@id/vitaminATextView"
                    app:layout_constraintStart_toStartOf="parent"/>

            <EditText
                    android:id="@+id/vitaminCValue"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/placeholder_value"
                    android:singleLine="true"
                    android:inputType="number"
                    app:layout_constraintTop_toTopOf="@id/vitaminCTextView"
                    app:layout_constraintBottom_toBottomOf="@id/vitaminCTextView"
                    app:layout_constraintStart_toEndOf="@id/guideline"/>

            <Button
                    android:id="@+id/submitButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:layout_marginHorizontal="20dp"
                    android:text="@string/button_submit"
                    app:layout_constraintTop_toBottomOf="@id/vitaminCTextView"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/foodstuffListConstraint"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintTop_toBottomOf="@id/foodstuffImage1"
                app:layout_constraintBottom_toBottomOf="parent">

            <CheckBox
                    android:id="@+id/isGoodForDiabeticsCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/check_box_good_for_diabetics"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>

            <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/foodstuffRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginBottom="50dp"
                    tools:itemCount="3"
                    tools:listitem="@layout/item_foodstuff"
                    app:layout_behavior="@string/appbar_scrolling_view_behavior"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintTop_toBottomOf="@id/isGoodForDiabeticsCheckBox"
                    app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.viewpager.widget.ViewPager>

</androidx.constraintlayout.widget.ConstraintLayout>